fix for web content notice appearing behind image

--- a/src/styles/pages/_detail.scss
+++ b/src/styles/pages/_detail.scss
@@ -31,6 +31,7 @@
       height: 100%;
       width: calc(100% -  40px);
       box-sizing: border-box;
+      z-index: 1;
     }
 
     .sensitive-content {
